# gfx2agb

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FindMRuby.cmake  gfx2agb.rb
include/: bitmap.hpp  color_format.hpp  filter_script.hpp  image_io.hpp  logging.hpp  options.hpp  palette.hpp  script.hpp  util.hpp
source/: bitmap.cpp  color_format.cpp  filter_script.cpp  image_io.cpp  main.cpp  palette.cpp  script.cpp  util.cpp
